--- a/WireGuardCommand/MainWindow.xaml
+++ b/WireGuardCommand/MainWindow.xaml
@@ -6,12 +6,12 @@
         xmlns:local="clr-namespace:WireGuardCommand"
         mc:Ignorable="d"
         Title="WireGuard Command" 
-        Height="450" Width="800" MinHeight="450" MinWidth="800">
+        Height="500" Width="800" MinHeight="500" MinWidth="800">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Margin="5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition/>
+                <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
@@ -24,16 +24,23 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0">Prefix</Label>
+                    <Label Grid.Row="0">Prefix (Optional)</Label>
                     <TextBox Grid.Row="1"></TextBox>
 
-                    <Label Grid.Row="2">Command</Label>
+                    <Label Grid.Row="2">Command (Optional)</Label>
                     <TextBox Grid.Row="3"></TextBox>
 
-                    <Label Grid.Row="4">Postfix</Label>
+                    <Label Grid.Row="4">Postfix (Optional)</Label>
                     <TextBox Grid.Row="5"></TextBox>
+
+                    <GroupBox Grid.Row="6" Header="Macros">
+                        <Expander>
+                            <Label>Hello World</Label>
+                        </Expander>
+                    </GroupBox>
                 </Grid>
             </GroupBox>
 
@@ -54,22 +61,22 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Column="0" Grid.Row="0">Listen Port</Label>
+                    <Label Grid.Column="0" Grid.Row="0">Server Listen Port</Label>
                     <TextBox Grid.Column="0" Grid.Row="1"></TextBox>
 
                     <Label Grid.Column="1" Grid.Row="0" Margin="5 0">No. Clients</Label>
                     <TextBox Grid.Column="1"  Grid.Row="1" Margin="5 0"></TextBox>
 
-                    <Label Grid.Column="2" Grid.Row="0">CIDR</Label>
+                    <Label Grid.Column="2" Grid.Row="0">Transit Subnet</Label>
                     <TextBox Grid.Column="2" Grid.Row="1"></TextBox>
 
                     <Label Grid.Column="0" Grid.Row="2">Allowed IPs (Client)</Label>
                     <TextBox Grid.Column="0" Grid.Row="3"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="2" Margin="5 0">Endpoint (Optional)</Label>
+                    <Label Grid.Column="1" Grid.Row="2" Margin="5 0">Endpoint Including Port (Optional)</Label>
                     <TextBox Grid.Column="1"  Grid.Row="3" Margin="5 0"></TextBox>
 
-                    <Label Grid.Column="2" Grid.Row="2">DNS (Optional)</Label>
+                    <Label Grid.Column="2" Grid.Row="2">Remote DNS (Optional)</Label>
                     <TextBox Grid.Column="2" Grid.Row="3"></TextBox>
 
                     <Label Grid.Column="0" Grid.Row="4">Interface Name (Optional)</Label>
