--- a/WireGuardCommand/MainWindow.xaml
+++ b/WireGuardCommand/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WireGuardCommand"
+        xmlns:uc="clr-namespace:WireGuardCommand.Resources.UserControls"
         mc:Ignorable="d"
         Title="WireGuard Command" 
         Height="500" Width="800" MinHeight="500" MinWidth="800">
@@ -38,7 +39,19 @@
 
                     <GroupBox Grid.Row="6" Header="Macros">
                         <Expander>
-                            <Label>Hello World</Label>
+                            <ScrollViewer VerticalScrollBarVisibility="auto">
+                                <ItemsControl>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBox Grid.Column="0" Text="{}{clientid}" IsReadOnly="True"></TextBox>
+                                        <Label Grid.Column="1">The client id for each generated client.</Label>
+                                    </Grid>
+                                </ItemsControl>
+                            </ScrollViewer>
                         </Expander>
                     </GroupBox>
                 </Grid>
@@ -69,21 +82,7 @@
 
                     <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal">
                         <Label>Transit Subnet</Label>
-                        <Image Source="./Resources/Icons/icon-information.png" 
-                               Width="16" Height="16"
-                               RenderOptions.BitmapScalingMode="HighQuality">
-                            <Image.ToolTip>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
-                                        <RowDefinition/>
-                                    </Grid.RowDefinitions>
-
-                                    <Label Grid.Row="0" FontWeight="DemiBold">Subnet Example</Label>
-                                    <Label Grid.Row="1">10.0.0.0/24</Label>
-                                </Grid>
-                            </Image.ToolTip>
-                        </Image>
+                        <uc:InfoToolTip Header="Subnet Example" Information="10.0.0.0/24"></uc:InfoToolTip>
                     </StackPanel>
                     <TextBox Grid.Column="2" Grid.Row="1"></TextBox>
 
