--- a/WireGuardCommand/MainWindow.xaml
+++ b/WireGuardCommand/MainWindow.xaml
@@ -61,14 +61,14 @@
                     <Label Grid.Column="0" Grid.Row="0">Server Listen Port</Label>
                     <TextBox x:Name="InputListenPort" Grid.Column="0" Grid.Row="1"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="0" Margin="5 0">No. Clients</Label>
+                    <Label x:Name="LabelNoClients"  Grid.Column="1" Grid.Row="0" Margin="5 0">No. Clients</Label>
                     <TextBox x:Name="InputNoClients" Grid.Column="1"  Grid.Row="1" Margin="5 0"></TextBox>
 
                     <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal">
                         <Label>Transit Subnet</Label>
                         <uc:InfoToolTip Header="Subnet Example" Information="10.0.0.0/24"></uc:InfoToolTip>
                     </StackPanel>
-                    <TextBox x:Name="InputSubnet" Grid.Column="2" Grid.Row="1"></TextBox>
+                    <TextBox x:Name="InputSubnet" Grid.Column="2" Grid.Row="1" TextChanged="InputSubnet_TextChanged"></TextBox>
 
                     <Label Grid.Column="0" Grid.Row="2">Allowed IPs (Client)</Label>
                     <TextBox x:Name="InputIPs" Grid.Column="0" Grid.Row="3"></TextBox>
