--- a/WireGuardCommand/MainWindow.xaml
+++ b/WireGuardCommand/MainWindow.xaml
@@ -58,33 +58,55 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Column="0" Grid.Row="0">Server Listen Port</Label>
+                    
+                    <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+                        <Label>Server Listen Port</Label>
+                        <uc:InfoToolTip Header="Server Listen Port" Information="Sets the WireGuard interface UDP listen port.&#x0a;It must be unique in the case of other existing interfaces."></uc:InfoToolTip>
+                    </StackPanel>
                     <TextBox x:Name="InputListenPort" Grid.Column="0" Grid.Row="1"></TextBox>
 
-                    <Label x:Name="LabelNoClients"  Grid.Column="1" Grid.Row="0" Margin="5 0">No. Clients</Label>
+                    <StackPanel Grid.Column="1" Grid.Row="0" Margin="5 0" Orientation="Horizontal">
+                        <Label x:Name="LabelNoClients">No. Clients</Label>
+                        <uc:InfoToolTip Header="Number of Clients" Information="Sets the number of generated client peers.&#x0a;Limited by the transit subnet, but can be manually extended later if within transit subnet limits."></uc:InfoToolTip>
+                    </StackPanel>
                     <TextBox x:Name="InputNoClients" Grid.Column="1"  Grid.Row="1" Margin="5 0"></TextBox>
 
                     <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Horizontal">
                         <Label>Transit Subnet</Label>
-                        <uc:InfoToolTip Header="Subnet Example" Information="10.0.0.0/24"></uc:InfoToolTip>
+                        <uc:InfoToolTip Header="Transit Subnet" Information="Sets the transit network that exists between the clients local subnet and the hosts internal set of subnets.&#x0a;This avoids conflicts and allows easier filtering. It's also what limits the amount of client peers.&#x0a;&#x0a;Example:&#x0a;10.0.0.0/24"></uc:InfoToolTip>
                     </StackPanel>
                     <TextBox x:Name="InputSubnet" Grid.Column="2" Grid.Row="1" TextChanged="InputSubnet_TextChanged"></TextBox>
 
-                    <Label Grid.Column="0" Grid.Row="2">Allowed IPs (Client)</Label>
+                    <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal">
+                        <Label>Allowed IPs (Client)</Label>
+                        <uc:InfoToolTip Header="Allowed IPs (Client)" Information="Sets the subnets that the client will attempt routing to through an established WireGuard tunnel.&#x0a;When 0.0.0.0/0 is specified, all traffic will route through the tunnel."></uc:InfoToolTip>
+                    </StackPanel>
                     <TextBox x:Name="InputIPs" Grid.Column="0" Grid.Row="3"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="2" Margin="5 0">Endpoint Including Port (Optional)</Label>
+                    <StackPanel Grid.Column="1" Grid.Row="2" Margin="5 0" Orientation="Horizontal">
+                        <Label>Endpoint Including Port (Optional)</Label>
+                        <uc:InfoToolTip Header="Endpoint Including Port (Optional)" Information="The endpoint is not mandatory.&#x0a;However, it enforces the client to connect to the hosting endpoint&#x0a;and not to the endpoint that the public key routes to."></uc:InfoToolTip>
+                    </StackPanel>
                     <TextBox x:Name="InputEndpoint" Grid.Column="1"  Grid.Row="3" Margin="5 0"></TextBox>
 
-                    <Label Grid.Column="2" Grid.Row="2">Remote DNS (Optional)</Label>
+                    <StackPanel Grid.Column="2" Grid.Row="2" Orientation="Horizontal">
+                        <Label>Remote DNS (Optional)</Label>
+                        <uc:InfoToolTip Header="Remote DNS (Optional)" Information="Allows client side remote subnet name resolution when you have a DNS server on the hosting subnet.&#x0a;Often used when on-premise DNS exists."></uc:InfoToolTip>
+                    </StackPanel>
                     <TextBox x:Name="InputDNS" Grid.Column="2" Grid.Row="3"></TextBox>
 
-                    <Label Grid.Column="0" Grid.Row="4">Interface Name (Optional)</Label>
+                    <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal">
+                        <Label>Interface Name (Optional)</Label>
+                        <uc:InfoToolTip Header="Interface Name (Optional)" Information="Sets the WireGuard interface name which the peers will rely on, including command output."></uc:InfoToolTip>
+                    </StackPanel>
                     <TextBox x:Name="InputInterface" Grid.Column="0" Grid.Row="5"></TextBox>
 
                     <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="6">
                         <CheckBox x:Name="CheckBoxPresharedKeys" VerticalAlignment="Center"></CheckBox>
-                        <Label>Use Pre-Shared Keys</Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label>Use Pre-Shared Keys</Label>
+                            <uc:InfoToolTip Header="Pre-Shared Keys" Information="Adds another layer of security where the peers have to not only match their keypairs, but also have to pass a pre-shared key check."></uc:InfoToolTip>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
             </GroupBox>
