--- a/WireGuardCommand/App.xaml
+++ b/WireGuardCommand/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WireGuardCommand.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WireGuardCommand"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WireGuardCommand">
     <Application.Resources>
          
     </Application.Resources>
