Added basic button theme.

--- a/WireGuardCommand/App.xaml
+++ b/WireGuardCommand/App.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WireGuardCommand">
     <Application.Resources>
-         
+        <ResourceDictionary Source="./Resources/Themes/BasicButton.xaml"></ResourceDictionary>
     </Application.Resources>
 </Application>
