Added project management interface including list & create.

--- a/WireGuardCommand/Pages/Index.razor
+++ b/WireGuardCommand/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 
+@using System.Runtime.InteropServices
 @using WireGuardCommand.Pages.Project
 
 @{
@@ -8,31 +9,30 @@
 
 <div class="container">
     <div class="project-list">
-        <div style="display: flex; gap: 0.5rem">
+        <div class="project-list-header">
             <div style="font-weight: bold; font-size: 1.25rem; padding: 1rem">Projects</div>
-            <div style="display: flex; align-items: center;">
+            <div style="display: flex; align-items: center; gap: 1rem">
                 <button class="btn-primary" @onclick="CreateProject">+ New Project</button>
+
+                @if(RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
+                {
+                <button class="btn-primary" @onclick="BrowseProjects">Open Folder</button>
+                }
             </div>
         </div>
-        @if (projects.Count < 1)
+
+        @foreach (var project in projects)
         {
-            <div>No projects found.</div>
-        }
-        else
-        {
-            foreach (var project in projects)
-            {
-                <button class="project-card @(project == SelectedProject ? "selected" : "")" @onclick="() => SelectProject(project)">
-                    <div style="display: flex; align-items: center; gap: 0.5rem; font-weight: bold">
-                        @project.Name
-                        @if(project.IsEncrypted)
-                        {
-                            <img src="/images/lock.png" width="16"/>
-                        }
-                    </div>
-                    <div>@project.Path</div>
-                </button>
-            }
+        <button class="project-card @(project == SelectedProject ? "selected" : "")" @onclick="() => SelectProject(project)">
+            <div style="display: flex; align-items: center; gap: 0.5rem; font-weight: bold">
+                @project.Name
+                @if (project.IsEncrypted)
+                {
+                    <img src="/images/lock.png" width="16" />
+                }
+            </div>
+            <div>@project.Path</div>
+        </button>
         }
     </div>
 
@@ -41,6 +41,10 @@
         <div class="project-info">
             <div class="project-info-body">
                 <div style="font-weight: bold">@SelectedProject.Name</div>
+                @if (SelectedProject.IsEncrypted)
+                {
+                    <div style="color: dodgerblue; font-size: 0.75rem">Encrypted</div>
+                }
                 <div style="font-size: 0.75rem; word-wrap: anywhere">@SelectedProject.Path</div>
 
                 <div style="display: flex; gap: 0.5rem">
