--- a/WireGuardCommand/Pages/Project/ProjectLoad.razor
+++ b/WireGuardCommand/Pages/Project/ProjectLoad.razor
@@ -1,4 +1,4 @@
-﻿@page "/ProjectDecrypt"
+﻿@page "/ProjectLoad"
 
 <div class="container">
     <button class="btn-primary" @onclick="GoBack">Back</button>
