--- a/WireGuardCommand/Pages/Project/ProjectLoad.razor
+++ b/WireGuardCommand/Pages/Project/ProjectLoad.razor
@@ -1,22 +1,34 @@
 ﻿@page "/ProjectLoad"
+@{
+    var project = ProjectManager.CurrentProject;
+}
 
 <div class="container">
-    <button class="btn-primary" @onclick="GoBack">Back</button>
-
-    @if (ProjectManager.CurrentProject is null)
+    @if (project is not null &&
+            project.Metadata is not null)
     {
-        <div>No project loaded.</div>
+        if (project.Metadata.IsEncrypted)
+        {
+            <button class="btn-primary" @onclick="GoBack">Back</button>
+
+            <div>This project is encrypted and requires a passphrase to access.</div>
+
+            <input type="password" @bind-value="ProjectManager.CurrentProject.Passphrase" />
+            <button class="btn-primary" @onclick="DecryptProjectAsync">Decrypt</button>
+
+            @if (!string.IsNullOrWhiteSpace(Error))
+            {
+                <div style="color: red">@Error</div>
+            }
+        }
+        else
+        {
+            <div>Loading..</div>
+        }
     }
     else
     {
-        <div>This project is encrypted and requires a passphrase to access.</div>
-
-        <input type="password" @bind-value="ProjectManager.CurrentProject.Passphrase" />
-        <button class="btn-primary" @onclick="DecryptProjectAsync">Decrypt</button>
-
-        @if (!string.IsNullOrWhiteSpace(Error))
-        {
-            <div style="color: red">@Error</div>
-        }
+        <button class="btn-primary" @onclick="GoBack">Back</button>
+        <div>Failed to load project.</div>
     }
 </div>
